# Network-Automation

./: .gitignore  CMakeLists.txt  README.md  main.cpp  test.cpp
Broadcasting Media/: 1.SMPTE_2022-7.cpp  2.SDI_OpenCV.py
Broadcasting_Media/: 00_CMake_SDK_Config.txt  00_CMake_SDK_Notes.txt  00_DeckLink.py  00_SDK_SDI_Test.cpp  01_CMake_GStreamer.txt  02_SDI_OpenCV.py  02_SDK_SDI_Input_Output.cpp  GST_mp4_to_SDI_02.cpp  Notes_CMake_SDI_Config.txt  SDK_DeckLink_Capture_00.cpp  SDK_Input_Output_01.cpp  SDK_Input_Output_02.cpp  SDK_mp4_to_SDI_01.cpp
Broadcasting_Media/src_sdk/: CaptureDelegate.cpp  CaptureDelegate.h
Broadcasting_Media/src_sdk_capture/: DeckLinkManager.h
Broadcasting_Media/src_sdk_in-out/: CaptureDelegate.cpp  CaptureDelegate.h  DeckLinkManager.cpp  DeckLinkManager.h  PlaybackDelegate.cpp  PlaybackDelegate.h
Linux_Codes/: 0_Linux_Debugger.cpp
Network Programming/: 01_Socket_Module.py
Network Programming/Redis_Real-Time_Data/: 0_client.cpp
Network_Programming/: 01_Socket_Module.py  02_device_offline.cpp
Network_Programming/Redis_Real-Time_Data/: 0_client.cpp
PowerShell/: keep_alive.ps1
Real-Time_Monitoring/: 01_FFmpeg_Codecs.py  02_Channels_Monitoring.py  03_SRT_Monitoring.py
Real-Time_Monitoring/logs/: 01_channels_codecs.csv  02_channels_monitoring.csv  03_srt_monitoring.csv
src_sdk/: DeckLinkManager.cpp
